# Streamlit-Portfolio-Dashboard

./: .gitignore  README.md  home.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
sample_data/: trades.csv
src/: analytics.py  data_io.py  prices.py
tests/: conftest.py  test_analytics.py  test_prices.py
